// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`websocket crypto endpoint should return success 1`] = `
{
  "data": {
    "result": 40067,
  },
  "result": 40067,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1018,
    "providerDataStreamEstablishedUnixMs": 1010,
    "providerIndicatedTimeUnixMs": 1645203822000,
  },
}
`;

exports[`websocket crypto endpoint with override should return success 1`] = `
{
  "data": {
    "result": 40067,
  },
  "result": 40067,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1018,
    "providerDataStreamEstablishedUnixMs": 1010,
    "providerIndicatedTimeUnixMs": 1645203822000,
  },
}
`;

exports[`websocket lwba endpoint should return error (LWBA violation) 1`] = `
{
  "error": {
    "message": "Invariant violation. Mid price must be between bid and ask prices. Got: (bid: 1.123, mid: 1.1635, ask: 1.125)",
    "name": "AdapterLWBAError",
  },
  "status": "errored",
  "statusCode": 500,
}
`;

exports[`websocket lwba endpoint should return success 1`] = `
{
  "data": {
    "ask": 1.1662,
    "bid": 1.1607,
    "mid": 1.1635,
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1018,
    "providerDataStreamEstablishedUnixMs": 1010,
    "providerIndicatedTimeUnixMs": 1677876163000,
  },
}
`;

exports[`websocket lwba endpoint with override should return success 1`] = `
{
  "data": {
    "ask": 2652.26,
    "bid": 2651.01,
    "mid": 2651.63,
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1018,
    "providerDataStreamEstablishedUnixMs": 1010,
    "providerIndicatedTimeUnixMs": 1677876163000,
  },
}
`;
